--- a/.github/workflows/Dockerise.yml
+++ b/.github/workflows/Dockerise.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: my-react-app-image
-          path: docker.io/library/my-react-app:latest
+          path: ../
